...
                android:textColor="?attr/colorPrimary"
                app:layout_constraintBottom_toTopOf="@id/cta_subtitle_text"
                app:layout_constraintEnd_toStartOf="@id/cta_end_barrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="Continue" />

            <TextView
                android:id="@+id/cta_subtitle_text"
                style="@style/TextStyle.Connect.BodyS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
                app:icon="@drawable/ic_connect_arrow_forward"
                app:iconGravity="textEnd"
                app:iconTint="?attr/connectCtaButtonForeground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Start" />

            <org.commcare.views.connect.CircleProgressBar
                android:id="@+id/cta_progress_ring"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:visibility="gone"
...
