...
            app:srcCompat="@drawable/ic_chevron_right"
            android:paddingEnd="@dimen/content_start"
            android:paddingStart="@dimen/new_progressbar_button_padding"
            android:layout_alignParentEnd="true" />

        <org.commcare.views.ClippingFrame
            android:id="@+id/nav_btn_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignBottom="@+id/nav_btn_prev"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/nav_btn_prev"
...
                    android:id="@+id/nav_btn_finish_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/nav_image_finish"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:text="CONTINUE"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:clickable="false"
                    android:layout_toStartOf="@+id/nav_image_finish"
                    android:layout_alignParentStart="true" />

...
