<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search_action_bar"
          android:title="Search"
          android:icon="@drawable/ic_magnify"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/barcode_scan_action_bar"
          android:title="Scan Barcode"
          android:icon="@drawable/scan_app_barcode"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100" />
</menu>
