<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:id="@+id/screen_suite_menu_root_view"
    android:layout_height="wrap_content"
    android:background="@color/cc_core_bg"
    tools:viewBindingIgnore="true">

    <FrameLayout
        android:id="@+id/universal_frame_tile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>

    <FrameLayout
        android:id="@+id/ad_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="@dimen/standard_spacer_double"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_above="@id/ad_container"
        android:layout_below="@id/universal_frame_tile">

        <include layout="@layout/component_drop_shadow"/>

        <ListView
            android:id="@+id/screen_suite_menu_list"
            style="@style/ListViewV2"
            android:clipChildren="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:listSelector="@drawable/selector"/>
    </FrameLayout>

</RelativeLayout>
