...
    <string name="clear_answer" cc:translatable="true">Remove response</string>
    <string name="clear_answer_ask" cc:translatable="true">Remove This Response?</string>
    <string name="clear_answer_no" cc:translatable="true">CANCEL</string>
    <string name="discard_answer" cc:translatable="true">REMOVE RESPONSE</string>
    <string name="discard_image" cc:translatable="true">Remove Image</string>
    <string name="do_not_exit" cc:translatable="true">STAY IN FORM</string>
    <string name="do_not_save" cc:translatable="true">EXIT WITHOUT SAVING</string>
    <string name="error_occured" cc:translatable="true">Error Occurred</string>
    <string name="file_invalid" cc:translatable="true">File: %s is invalid.</string>
    <string name="file_missing" cc:translatable="true">File: %s is missing.</string>
    <string name="get_location" cc:translatable="true">Record Location</string>
    <string name="invalid_answer_error" cc:translatable="true">Sorry, this response is invalid!</string>
    <string name="jump_to_beginning" cc:translatable="true">Go To Start</string>
...
    <string name="root_detected_title" cc:translatable="true">Rooted Device Detected</string>
    <string name="root_detected_message" cc:translatable="true">You are not allowed to run CommCare on a rooted device. Please use a non rooted device</string>
    <string name="session_endpoint_unavailable" cc:translatable="true">No endpoint exist with id %1$s. Valid endpoints are %2$s</string>
    <string name="session_endpoint_invalid_arguments" cc:translatable="true">Incorrect arguments supplied for endpoint %1$s. Supplied arguments: %2$s. Expected arguments: %3$s.</string>

    <string name="playback_start_time">00:00</string>
    <string name="dependency_missing_dialog_title" cc:translatable="true">Get Required App</string>
    <string name="dependency_missing_dialog_title_plural" cc:translatable="true">Get Required Apps</string>
    <string name="dependency_missing_dialog_message" cc:translatable="true">CommCare needs %s application to be installed on your device before you can continue</string>
    <string name="dependency_missing_dialog_message_plural" cc:translatable="true">CommCare needs below applications to be installed on your device before you can continue-</string>
    <string name="dependency_missing_dialog_go_to_store" cc:translatable="true">Install from Store</string>
    <string name="dependency_missing_dialog_playstore_not_found" cc:translatable="true">No Play Store found on your device</string>

    <string name="fcm_default_notification_channel">notification-channel-push-notifications</string>

    <string name="entity_map_markers" cc:translatable="true">Markers</string>
    <string name="entity_map_polygons" cc:translatable="true">Polygons</string>
...
    <string name="connect_learn_completed_module_label">Completed Module</string>
    <string name="connect_learn_assessment_name">Assessment</string>
    <string name="connect_learn_assessment_description">Pass the assessment to earn your certificate.</string>
    <string name="connect_learn_assessment_failed_banner">You didn\'t pass the assessment. You can try again.</string>
    <string name="connect_learn_cta_complete_assessment">Complete assessment</string>
    <string name="connect_learn_cta_take_assessment">Take assessment</string>
    <string name="connect_learn_cta_start">Start</string>

    <string name="connect_delivery_go">Go To App</string>
    <string name="connect_progress_delivery">Delivery</string>
    <string name="semi_circle_progress_value_format" cc:translatable="true">%1$d of %2$d</string>
    <string name="connect_progress_count_format" cc:translatable="true">%1$d of %2$d</string>

...
